# hdx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  architecture.md
conformance/: README.md
conformance/generator/: pyproject.toml  regenerate.sh
conformance/generator/hdx_fixtures/: __init__.py  __main__.py  assertions.py  build.py  grids.py  manifest.py  mutate.py  outlines.py  scalar.py
conformance/goldens/: invalid-basin-id-folder-mismatch.validate.json  invalid-crs-mismatch.validate.json  invalid-divergent-grid-label-set.validate.json  invalid-irregular-time-axis.validate.json  invalid-misaligned-shared-label.validate.json  invalid-missing-basin-id-column.validate.json  invalid-missing-gridded-dynamic-subtree.validate.json  invalid-non-monotonic-time.validate.json  invalid-ragged-field-schema.validate.json  valid-geometry-less.describe.json  valid-geometry-less.validate.json  valid-irregular-time-axis.validate.json  valid-minimal.describe.json  valid-minimal.validate.json  valid-multi_grid_multi_static.describe.json  valid-multi_grid_multi_static.validate.json  valid-multi_static_one_label.describe.json
conformance/invalid/basin-id-folder-mismatch/: validate.golden.json
conformance/invalid/basin-id-folder-mismatch/basin=0001/gridded_dynamic/era5.zarr/era5_precipitation/: zarr.json
conformance/invalid/basin-id-folder-mismatch/basin=0002/gridded_dynamic/era5.zarr/time/: zarr.json
conformance/invalid/basin-id-folder-mismatch/basin=0002/gridded_dynamic/era5.zarr/time/c/: 0
conformance/invalid/basin-id-folder-mismatch/basin=0003/: scalar_dynamic.parquet
conformance/invalid/basin-id-folder-mismatch/basin=0003/gridded_dynamic/era5.zarr/time/c/: 0
conformance/invalid/empty-cadence/: manifest.json  scalar_static.parquet
conformance/invalid/empty-cadence/basin=0001/: scalar_dynamic.parquet
conformance/invalid/empty-cadence/basin=0002/gridded_dynamic/era5.zarr/: zarr.json
conformance/invalid/empty-cadence/basin=0002/gridded_dynamic/era5.zarr/lat/c/: 0
conformance/invalid/empty-cadence/basin=0002/gridded_static/: era5.tif
conformance/invalid/empty-cadence/basin=0003/gridded_dynamic/era5.zarr/lon/c/: 0
conformance/invalid/extra-manifest-field/: manifest.json
conformance/invalid/missing-basin-id-column/: manifest.json  outlines.geoparquet  validate.golden.json
conformance/invalid/missing-basin-id-column/basin=0002/gridded_dynamic/era5.zarr/era5_precipitation_was_filled/: zarr.json
conformance/invalid/missing-basin-id-column/basin=0003/: scalar_dynamic.parquet
conformance/invalid/missing-basin-id-column/basin=0003/gridded_dynamic/era5.zarr/era5_precipitation_was_filled/c/0/0/: 0
conformance/invalid/missing-root-rollup/basin=0001/gridded_dynamic/era5.zarr/crs/: zarr.json
conformance/invalid/missing-root-rollup/basin=0001/gridded_dynamic/era5.zarr/era5_precipitation/c/0/0/: 0
conformance/invalid/missing-root-rollup/basin=0001/gridded_dynamic/era5.zarr/era5_precipitation_was_filled/: zarr.json
conformance/invalid/missing-root-rollup/basin=0002/: scalar_dynamic.parquet
conformance/invalid/missing-root-rollup/basin=0002/gridded_dynamic/era5.zarr/: zarr.json
conformance/invalid/missing-root-rollup/basin=0003/gridded_dynamic/era5.zarr/: zarr.json
conformance/invalid/missing-root-rollup/basin=0003/gridded_dynamic/era5.zarr/lon/: zarr.json
conformance/invalid/non-monotonic-time/basin=0001/gridded_dynamic/era5.zarr/lat/: zarr.json
conformance/invalid/non-monotonic-time/basin=0001/gridded_dynamic/era5.zarr/time/: zarr.json
conformance/invalid/non-monotonic-time/basin=0003/: scalar_dynamic.parquet
conformance/invalid/ragged-field-schema/basin=0002/gridded_dynamic/era5.zarr/era5_precipitation/: zarr.json
conformance/invalid/ragged-field-schema/basin=0003/: scalar_dynamic.parquet
conformance/invalid/wrong-format-version/: manifest.json
conformance/invalid/wrong-format-version/basin=0001/gridded_dynamic/era5.zarr/: zarr.json
conformance/invalid/wrong-format-version/basin=0002/gridded_dynamic/era5.zarr/era5_precipitation/c/0/0/: 0
conformance/invalid/wrong-format-version/basin=0003/: scalar_dynamic.parquet
conformance/invalid/wrong-format-version/basin=0003/gridded_dynamic/era5.zarr/era5_precipitation/: zarr.json
conformance/invalid/wrong-format-version/basin=0003/gridded_dynamic/era5.zarr/era5_precipitation_was_filled/: zarr.json
conformance/valid/minimal/basin=0001/gridded_dynamic/era5.zarr/: zarr.json
conformance/valid/minimal/basin=0001/gridded_dynamic/era5.zarr/time/c/: 0
conformance/valid/minimal/basin=0003/gridded_dynamic/era5.zarr/time/: zarr.json
crates/core/: Cargo.toml  README.md
crates/core/src/: cog_reader.rs  describe.rs  discovery.rs  error.rs  field.rs  format_version.rs  geoparquet_reader.rs  grid.rs  gridded_discovery.rs  layout.rs  lib.rs  manifest.rs  newtypes.rs  parquet_meta.rs  scalar_reader.rs  validate.rs  zarr_reader.rs
crates/core/tests/: manifest_schema.rs
crates/python/: Cargo.toml  README.md  pyproject.toml  run_python_tests.sh
crates/python/src/: lib.rs
crates/python/tests/: test_mirror.py
planning/: milestones-critique.v1.md  milestones-critique.v2.md  milestones.md  milestones.v1.md  milestones.v2.md
planning/MS1/: steps-critique.v1.md  steps.v1.md
planning/MS2/: steps-critique.md  steps.v1.md
planning/MS3/: steps-critique.md  steps.v1.md
planning/MS4/: steps-critique.md  steps-critique.v1.md  steps-critique.v2.md  steps-critique.v3.md  steps.v1.md  steps.v2.md  steps.v3.md  steps.v4.md
planning/MS5/: steps-critique.v1.md  steps.v1.md
planning/MS6/: steps-critique.v1.md  steps.v1.md
planning/MS7/: steps-critique.md  steps.v1.md
planning/MS8/: steps-completion-critique.md  steps-completion.v1.md  steps-critique.v1.md  steps-critique.v2.md  steps-critique.v3.md  steps-critique.v4.md  steps.v1.md  steps.v2.md  steps.v3.md  steps.v4.md
planning/MS9/: steps-critique.md  steps-critique.v1.md  steps.v1.md  steps.v2.md
schemas/: describe.schema.json  manifest.schema.json  validate.schema.json
spec/: HDX_SPEC.md
src/: main.rs
tests/: cli.rs
(+3 files in other folders)
