[package]
name = "hdx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Strict RFC 3339 timestamp parsing for `manifest.created_at` (spec §11/§14 M4).
# Pinned to `time` (over `chrono`) for its `well-known::Rfc3339` parser, which is
# strictly RFC 3339 — it rejects date-only and other non-conformant inputs.
time = { version = "0.3", features = ["parsing", "formatting"] }
# Pure-Rust Apache Arrow / Parquet stack — the R1 reader choice for the scalar
# physical encoding (spec §4/§8), pinned to major 58. NO GDAL system dependency.
# Features are deliberately minimal: `parquet` carries only the `arrow` integration
# (it surfaces the schema as an arrow `Schema`) — no `async`, no `object_store`,
# no compression codecs beyond the defaults. v0.1 reads parquet *metadata* and 1-D
# coordinate/key columns from the local filesystem only (architecture §1) — never
# gridded chunks. `arrow` is held to `arrow-schema`/`arrow-array` types via the
# default features kept by `parquet`. The Zarr/COG/geoparquet R1 decision is
# deferred to MS4 (see architecture.md Amendments log, R1-parquet).
arrow = { version = "58", default-features = false }
parquet = { version = "58", default-features = false, features = ["arrow"] }
# `bytes::Bytes` is parquet's zero-copy `ChunkReader` for an in-memory byte source
# (the reader feeds metadata from a `&[u8]` slice without touching the filesystem).
# Pinned to the same major `parquet` itself depends on.
bytes = "1"

[dev-dependencies]
# Test-only (never shipped in `hdx-core`): compiles the committed
# `schemas/manifest.schema.json` and cross-checks it against the S4 boundary
# parser, pinning the manifest half of R4 (architecture §7). No production path
# depends on this crate.
jsonschema = "0.46"
