[package]
name = "hdx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Strict RFC 3339 timestamp parsing for `manifest.created_at` (spec §11/§14 M4).
# Pinned to `time` (over `chrono`) for its `well-known::Rfc3339` parser, which is
# strictly RFC 3339 — it rejects date-only and other non-conformant inputs.
time = { version = "0.3", features = ["parsing", "formatting"] }
# Pure-Rust Apache Arrow / Parquet stack — the R1 reader choice for the scalar
# physical encoding (spec §4/§8), pinned to major 58. NO GDAL system dependency.
# Features are deliberately minimal: `parquet` carries the `arrow` integration (it
# surfaces the schema as an arrow `Schema`) plus `zstd` — the spec mandates scalar
# parquet is zstd-compressed (spec §8), so the bounded 1-D `time`/`basin_id` column
# reads (architecture §1) must be able to decompress zstd data pages. No `async`,
# no `object_store`, and no other compression codecs. v0.1 reads parquet *metadata*
# and 1-D coordinate/key columns from the local filesystem only (architecture §1) —
# never gridded chunks. `arrow` is held to `arrow-schema`/`arrow-array` types via the
# default features kept by `parquet`. The Zarr/COG/geoparquet R1 decision is
# deferred to MS4 (see architecture.md Amendments log, R1-parquet).
arrow = { version = "58", default-features = false }
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }
# `bytes::Bytes` is parquet's zero-copy `ChunkReader` for an in-memory byte source
# (the reader feeds metadata from a `&[u8]` slice without touching the filesystem).
# Pinned to the same major `parquet` itself depends on.
bytes = "1"
# Pure-Rust Zarr-v3 *metadata* crate — the R1 Zarr reader choice (MS4-S2; spec §7/§8,
# architecture §7 R1, MED-5), pinned to major 0 / minor 7. This is the metadata-only
# sub-crate of `zarrs` (NOT the full `zarrs` store crate): its dependency closure is
# `serde`/`serde_json`/`thiserror`/`derive_more`/`half`/`monostate` — **no** async, no
# `object_store`, no cloud, no chunk-IO. We use only its `v3::ArrayMetadataV3` type to
# parse each member of the §8 inline consolidated-metadata map; the root `zarr.json`
# is read once with `serde_json` (already present) and each array entry is deserialized
# into `ArrayMetadataV3`. NO GDAL. v0.1 reads `zarr.json` + the 1-D `lat`/`lon`/`time`
# coordinate chunks only (architecture §1) — never a `c/0/0/0` data chunk (LOW-3).
# LOW contingency (architecture §7 R1 amendment, "covers the Zarr crate … and any
# decompressor"): if this crate's metadata API differs at implementation time (it
# cannot be confirmed offline), pin the working adjacent major and record a follow-up
# amendment — a version surprise is a recorded pin-bump, never an ad-hoc red commit.
# If the crate could not parse the inline consolidated metadata at all, the documented
# fallback is to read the root `zarr.json` directly with `serde_json` (the consolidated
# metadata is plain JSON), preserving the no-network/no-GDAL guarantee.
zarrs_metadata = "0.7"
# Pure-Rust zstd decoder for the 1-D coordinate chunks (`lat`/`lon`/`time` `c/0`),
# which the fixture stores `bytes` (little-endian) + `zstd`-framed. Pinned to major
# 0 / minor 7. Pure Rust (no `zstd-sys` C bindings), keeping the no-GDAL/no-C-toolchain
# guarantee for the Zarr coordinate path. Only the 1-D coordinate chunks are ever
# decompressed; the sharded `c/0/0/0` data chunks are never read (LOW-3). This is the
# "any decompressor" the S1 R1 LOW contingency anticipates.
ruzstd = "0.7"
# Pure-Rust TIFF/GeoTIFF reader — the R1 COG reader choice (MS4-S3; spec §7/§8,
# architecture §7 R1, MED-4), pinned to major 0 / minor 11. `default-features =
# false` deliberately trims OUT every image-decode codec (`deflate`/`fax`/`jpeg`/
# `lzw`, and the C-linking `zstd`): the COG reader reads **tags only** (band
# descriptions + georef) and never decodes a pixel strip/tile, so no decompressor
# is needed. We use only `tiff::decoder::Decoder` + `find_tag`/`get_tag_*` to read
# the standard GeoTIFF georef tags (33550 ModelPixelScale, 33922 ModelTiepoint,
# 34735 GeoKeyDirectory) and the GDAL band-metadata tag (42112), keeping the
# no-GDAL / no-C-toolchain guarantee. NO GDAL, no async, no cloud, no pixel decode
# (LOW-3). MED-4 outcome resolved: **(1) pure-Rust read works** — `tiff` 0.11
# surfaces tag 42112 GDAL_METADATA as ASCII, from which HDX parses the band
# description (`elevation`) + units (`m`); G1 COG-side is metadata-deep and live
# (verified by the `cog_reader` fixture round-trip test). LOW contingency
# (architecture §7 R1 amendment): if this crate's tag-reading API differs at
# implementation time (it cannot be confirmed offline), pin the working adjacent
# major and record a follow-up amendment — a version surprise is a recorded
# pin-bump, never an ad-hoc red commit.
tiff = { version = "0.11", default-features = false }

[dev-dependencies]
# Test-only (never shipped in `hdx-core`): compiles the committed
# `schemas/manifest.schema.json` and cross-checks it against the S4 boundary
# parser, pinning the manifest half of R4 (architecture §7). No production path
# depends on this crate.
jsonschema = "0.46"
